Fix overflow and progress bar

--- a/app/(admin)/layout.module.scss
+++ b/app/(admin)/layout.module.scss
@@ -18,7 +18,7 @@
 			min-width: 22rem;
 			flex: 1 1 auto;
 			height: 100vh;
-			border: 1px solid $col-border;
+			border-right: 1px solid $col-border;
 			box-sizing: border-box;
 			overflow: auto;
 
